--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -29,6 +29,8 @@
   <script src="assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
+
+  <script src="assets/vendors/toastify/toastify.js"></script>
 </body>
 
 </html>
