--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -30,7 +30,7 @@
 
 
   <script src="assets/js/main.js"></script>
-
+  <script src="assets/vendors/sweetalert2/sweetalert2.all.min.js"></script>
   <script src="assets/vendors/toastify/toastify.js"></script>
 </body>
 
